CSS tipo Glass a Forms y Listados corregidos
Co-Authored-By: DloguPia <162518515+DloguPia@users.noreply.github.com>

--- a/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.html
+++ b/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.html
@@ -43,7 +43,7 @@
           <td>{{ detalle.cantidad }}</td>
           <td>{{ detalle.subtotal }}</td>
           <td class="botones">
-            <button (click)="eliminarDetalle(detalle.detallePedidoId)">Eliminar</button>
+            <button class="btnEliminar" (click)="eliminarDetalle(detalle.detallePedidoId)">Eliminar</button>
           </td>
         </tr>
       }
