--- a/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.html
+++ b/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.html
@@ -1,50 +1,57 @@
-<h2> {{isEditMode() ? 'Editar Duenio' : 'Registrar Duenio'}} </h2>
+<div class="form-container">
+  <div class="card">
+    <h2> {{isEditMode() ? 'Editar Duenio' : 'Registrar Duenio'}} </h2>
 
-<form [formGroup]="form" (ngSubmit)="save()">
- <div class = "campo">
-    <label> Nombre: </label>
-    <input type="text" formControlName="nombre">
-    @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
-      <span class = "error">El nonmbre del Dueño es requerido.</span>
-    }
- </div>
- <div class = "campo">
-   <label> Dni: </label>
-    <input type="number" formControlName="dni">
-    @if (form.get('dni')?.invalid && form.get('dni')?.touched) {
-      <span class = "error">El DNI del Dueño debe tener al menos 7 dígitos</span>
-    }
- </div>
- <div class = "campo">
-   <label> Edad: </label>
-    <input type="number" formControlName="edad">
-    @if (form.get('edad')?.invalid && form.get('edad')?.touched) {
-      <span class = "error">El Dueño debe ser mayor de edad (18).</span>
-    }
+    <form [formGroup]="form" (ngSubmit)="save()">
+    <div class = "campo">
+        <label> Nombre: </label>
+        <input type="text" formControlName="nombre">
+        @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
+          <span class="error">El campo no puede estar vacío ni contener caracteres no alfabéticos.</span>
+        }
+    </div>
+    <div class = "campo">
+      <label> Dni: </label>
+        <input type="number" formControlName="dni">
+        @if (form.get('dni')?.invalid && form.get('dni')?.touched) {
+          <span class="error">El DNI debe tener entre 6 y 9 dígitos</span>
+        }
+    </div>
+    <div class = "campo">
+      <label> Edad: </label>
+        <input type="number" formControlName="edad">
+        @if (form.get('edad')?.invalid && form.get('edad')?.touched) {
+          <span class="error">La persona debe tener entre 18 y 120 años.</span>
+        }
+      </div>
+    <div class = "campo">
+      <label> Email: </label>
+        <input type="text" formControlName="email">
+        @if (form.get('email')?.invalid && form.get('email')?.touched) {
+          <span class = "error">El email del Dueño es requerido en formato correcto.</span>
+        }
+    </div>
+    <div class = "campo">
+      <label> Contraseña: </label>
+        <input type="password" formControlName="contraseña">
+        @if (form.get('contraseña')?.invalid && form.get('contraseña')?.touched) {
+          <span class = "error">La contraseña del Dueño es requerida.</span>
+        }
+      </div>
+
+    <div class="botones">
+      <button type="submit"[disabled]="form.invalid">
+      {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
+      </button>
+
+      @if (isEditMode()) {
+        <button type="button" (click)="cancelEdit()" >Cancelar</button>
+      }
+    </div>
+
+    </form>
   </div>
- <div class = "campo">
-   <label> Email: </label>
-    <input type="text" formControlName="email">
-    @if (form.get('email')?.invalid && form.get('email')?.touched) {
-      <span class = "error">El email del Dueño es requerido en formato correcto.</span>
-    }
- </div>
- <div class = "campo">
-   <label> Contraseña: </label>
-    <input type="password" formControlName="contraseña">
-    @if (form.get('contraseña')?.invalid && form.get('contraseña')?.touched) {
-      <span class = "error">La contraseña del Dueño es requerida.</span>
-    }
+  <div class="image">
+    <img src="assets/images/arbol-sakura.png" alt="Personaje">
   </div>
-
- <div class="botones">
-  <button type="submit"[disabled]="form.invalid">
-   {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
-  </button>
-
-  @if (isEditMode()) {
-    <button type="button" (click)="cancelEdit()" >Cancelar</button>
-  }
- </div>
-
-</form>
+</div>
