--- a/gestion-mercado/src/app/pages/cliente-pages/cliente-form/cliente-form.html
+++ b/gestion-mercado/src/app/pages/cliente-pages/cliente-form/cliente-form.html
@@ -1,35 +1,42 @@
-<h2> {{isEditMode() ? 'Editar Cliente' : 'Registrar Cliente'}} </h2>
+<div class="form-container">
+  <div class="card">
+    <h2> {{isEditMode() ? 'Editar Cliente' : 'Registrar Cliente'}} </h2>
 
-<form [formGroup]="form" (ngSubmit)="saveCliente()">
-  <div class = "campo">
-    <label>Nombre: </label>
-    <input type="text" formControlName="nombre">
-    @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
-      <span class = "error">El campo no puede estar vacio ni contener caracteres no alfabeticos.</span>
-    }
-  </div>
-  <div class = "campo">
-    <label>Dni: </label>
-    <input type="number" formControlName="dni">
-    @if (form.get('dni')?.invalid && form.get('dni')?.touched) {
-      <span class = "error">El DNI debe tener enter 6 y 9 digitos</span>
-    }
-  </div>
-  <div class = "campo">
-    <label>Edad: </label>
-    <input type="number" formControlName="edad">
-    @if (form.get('edad')?.invalid && form.get('edad')?.touched) {
-      <span class = "error">El cliente debe tener entre 18 y 120 años.</span>
-    }
-  </div>
+    <form [formGroup]="form" (ngSubmit)="saveCliente()">
+      <div class = "campo">
+        <label>Nombre: </label>
+        <input type="text" formControlName="nombre">
+        @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
+          <span class = "error">El campo no puede estar vacio ni contener caracteres no alfabeticos.</span>
+        }
+      </div>
+      <div class = "campo">
+        <label>Dni: </label>
+        <input type="number" formControlName="dni">
+        @if (form.get('dni')?.invalid && form.get('dni')?.touched) {
+          <span class = "error">El DNI debe tener enter 6 y 9 digitos</span>
+        }
+      </div>
+      <div class = "campo">
+        <label>Edad: </label>
+        <input type="number" formControlName="edad">
+        @if (form.get('edad')?.invalid && form.get('edad')?.touched) {
+          <span class = "error">El cliente debe tener entre 18 y 120 años.</span>
+        }
+      </div>
 
-  <div class="botones">
-    <button type="submit"[disabled]="form.invalid">
-      {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
-    </button>
+      <div class="botones">
+        <button type="submit"[disabled]="form.invalid">
+          {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
+        </button>
 
-  @if (isEditMode()) {
-    <button type="button" (click)="cancelEdit()" >Cancelar</button>
-  }
+      @if (isEditMode()) {
+        <button type="button" (click)="cancelEdit()" >Cancelar</button>
+      }
+      </div>
+    </form>
   </div>
-</form>
+  <div class="image">
+    <img src="assets/images/arbol-sakura.png" alt="Personaje">
+  </div>
+</div>
