--- a/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
+++ b/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
@@ -1,38 +1,40 @@
+<section class="list-container">
+  <h2>Listado de Cuentas Bancarias</h2>
 
-<h2>Listado de Cuentas Bancarias</h2>
+  <div class="botones">
+      <button type="button" class="btn-agregar" routerLink="/menu/cuentas-bancarias/form"> Agregar </button>
 
-<select (change)="atributo.set($any($event.target).value)">
-  <option value="cbu">CBU</option>
-  <option value="saldo">Saldo</option>
-</select>
+      <select (change)="atributo.set($any($event.target).value)">
+        <option value="cbu">CBU</option>
+        <option value="saldo">Saldo</option>
+      </select>
 
-<input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
+  <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
+  </div>
 
-<div class="botones">
-    <button type="button" class="btnAgregar" routerLink="/menu/cuentas-bancarias/form"> Agregar </button>
-</div>
-
-<table border="1">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>CBU</th>
-      <th>Saldo</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    @for (c of cuentasFiltradas(); track $index) {
+  <table class="tabla">
+    <thead class="encabezado">
       <tr>
-        <td>{{c.cuentaBancariaId}}</td>
-        <td>{{c.cbu}}</td>
-        <td>{{c.saldo}}</td>
-
-        <td>
-          <button type="button" (click)="deleteCuentaBancaria(c.cuentaBancariaId)">Eliminar</button>
-          <button type="button" (click)="updateCuentaBancaria(c)">Editar</button>
-        </td>
+        <th>ID</th>
+        <th>CBU</th>
+        <th>Saldo</th>
+        <th>Acciones</th>
       </tr>
-    }
-  </tbody>
-</table>
+    </thead>
+
+    <tbody class="tablaBody">
+      @for (c of cuentasFiltradas(); track $index) {
+        <tr>
+          <td>{{c.cuentaBancariaId}}</td>
+          <td>{{c.cbu}}</td>
+          <td>{{c.saldo}}</td>
+
+          <td class="botones">
+            <button class="btnEliminar" type="button" (click)="deleteCuentaBancaria(c.cuentaBancariaId)">Eliminar</button>
+            <button class="btnEditar" type="button" (click)="updateCuentaBancaria(c)">Editar</button>
+          </td>
+        </tr>
+      }
+    </tbody>
+  </table>
+</section>
