--- a/gestion-mercado/src/app/pages/product-pages/product-form/product-form.html
+++ b/gestion-mercado/src/app/pages/product-pages/product-form/product-form.html
@@ -1,28 +1,35 @@
-<h2> {{ isEditMode() ? 'Editar Producto' : 'Registrar Producto' }} </h2>
+<div class="form-container">
+  <div class="card">
+    <h2> {{ isEditMode() ? 'Editar Producto' : 'Registrar Producto' }} </h2>
 
-<form [formGroup]="form" (ngSubmit)="saveProduct()">
-  <div class = "campo">
-    <label>Nombre: </label>
-    <input type ="text" formControlName="nombre">
-    @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
-      <span class = "error">El nombre del producto es requerido.</span>
-    }
-  </div>
-  <div class = "campo">
-    <label>Categoría: </label>
-    <input type="text" formControlName="categoria">
-    @if (form.get('categoria')?.invalid && form.get('categoria')?.touched) {
-      <span class = "error">La categoría del producto es requerido.</span>
-    }
-  </div>
+    <form [formGroup]="form" (ngSubmit)="saveProduct()">
+      <div class = "campo">
+        <label>Nombre: </label>
+        <input type ="text" formControlName="nombre">
+        @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
+          <span class = "error">El nombre del producto es requerido.</span>
+        }
+      </div>
+      <div class = "campo">
+        <label>Categoría: </label>
+        <input type="text" formControlName="categoria">
+        @if (form.get('categoria')?.invalid && form.get('categoria')?.touched) {
+          <span class = "error">La categoría del producto es requerido.</span>
+        }
+      </div>
 
-  <div class = "botones">
-    <button type="submit" [disabled]="form.invalid">
-        {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
-      </button>
+      <div class = "botones">
+        <button type="submit" [disabled]="form.invalid">
+            {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
+          </button>
 
-      @if (isEditMode()){
-        <button type="button" (click)="cancelEdit()">Cancelar</button>
-      }
+          @if (isEditMode()){
+            <button type="button" (click)="cancelEdit()">Cancelar</button>
+          }
+      </div>
+    </form>
   </div>
-</form>
+  <div class="image">
+    <img src="assets/images/producto-icon.png" alt="Personaje">
+  </div>
+</div>
